Update toolbar skin

--- a/src/tb/i18n/fr_FR/global.json
+++ b/src/tb/i18n/fr_FR/global.json
@@ -233,7 +233,7 @@
     "roles_management": "Gestion des rôles",
 
     "save": "Enregistrer",
-    "save_as_draft": "Enregistrer comme brouillon",
+    "save_as_draft": "Brouillon",
     "save_draft": "Sauvegarder le brouillon",
     "save_status": "Sauvegarder le statut",
     "saving_confirmation": "Confirmation de la sauvegarde",
